# makhdi_IY8_24

./: README.md
dz_1/: BSTree.cpp  BSTree.h  CMakeLists.txt  main.cpp
lab_07/: CMakeLists.txt  main.cpp
lab_1/: CMakeLists.txt  main.cpp  string.cpp  string.hpp  test.cpp
lab_2/: test.cpp  vector.h
lab_3/: MyShared.h  MyUnique.h  main.cpp
lab_4/: main.cpp
lab_5/: CMakeLists.txt  car.cpp  car.h  input.txt  main.cpp  output.txt
lab_6/: CMakeLists.txt  main.cpp  quadratic_equation.cpp  quadratic_equation.h
last_lab/: CMakeLists.txt  input.txt  main.cpp  student.h
